Add author to articles

--- a/building-online-store-using-shopify.html
+++ b/building-online-store-using-shopify.html
@@ -177,7 +177,7 @@
         </div>
         <div class="main section">
             <div class="container-1140">
-                <p>Date published: 13 February 2024</p>
+                <p>Date published: 13 February 2024 | by Sybil Mayard</p>
                 <img class="screenshot" src="images/Talking-Business-Building-an-Online-Store-Using-Shopify-540x540.png" alt="Free webinar on Building an Online Store Using Shopify in London Borough of Bexley">
                 <p>Are you a business owner who is planning to sell your products and/or services online? Then consider building an online store with <strong>Shopify</strong>, one of the world's most popular e-commerce platforms.</p>
                 <p>Attend our <strong>FREE webinar</strong> on Tuesday 12th March 2024 at 11am for an overview of how to set up an e-commerce store with <a href="https://sybiltec.com/6-reasons-to-use-shopify">Shopify</a>. No prior knowledge of the platform is needed.</p>
