--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                                 alt="Bexley Talking Business - Business Support"></a>
                             <div class="blog-card-text">                    
                                 <h3>Bexley Talking Business</h3>
-                                <p>14 December 2023</p>
+                                <p>14 December 2023 | by Sybil Mayard</p>
                                 <p>If you are an SME/sole trader based in Bexley, you may be eligible for free business support. Start your registration now.</p>
                                 <div class="padding-bottom padding-top">
                                     <a class="btn-primary" href="https://sybiltec.com/bexley-talking-business">Get Business Support</a>   
