Move areas covered from footer to Web Design page

--- a/website-design.html
+++ b/website-design.html
@@ -343,6 +343,34 @@
                     </div>
                 </div>
 
+                <h2>Areas Covered</h2>
+                <ul>
+                    <li>Abbey Wood</li>
+                    <li>Barnehurst</li>
+                    <li>Beckenham</li>
+                    <li>Belvedere</li>
+                    <li>Bexley</li>
+                    <li>Bexleyheath</li>
+                    <li>Blackheath</li>
+                    <li>Blackfen</li>
+                    <li>Bromley</li>
+                    <li>Charlton</li>
+                    <li>Chislehurst</li>
+                    <li>Crayford</li>
+                    <li>Deptford</li>
+                    <li>Eltham</li>
+                    <li>Erith</li>
+                    <li>Greenwich</li>
+                    <li>Lewisham</li>
+                    <li>Northumberland Heath</li>
+                    <li>Plumstead</li>
+                    <li>Sidcup</li>
+                    <li>Thamesmead</li>
+                    <li>Welling</li>
+                    <li>Woolwich</li>
+                    <li>And surrounding areas</li>
+                </ul>
+
                 <div class="padding-bottom">
                     <h2>A Message from Sybil</h2>
                     <div class="videoWrapper"><iframe width="560" height="315" src="https://www.youtube.com/embed/DY-LbcK8Pf4?si=4LhzHk2A6KqWVqJw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
@@ -416,7 +444,7 @@
                         </p>                      
                     </div>
                 </div>
-                <p class="center">Areas covered:<br>Abbey Wood, Barnehurst, Belvedere, Bexley, Bexleyheath, Blackheath, Bromley, Chislehurst, Crayford, Deptford, Erith, Greenwich, Lewisham, Northumberland Heath, Plumstead, Sidcup, Thamesmead, Welling, Woolwich and surrounding areas.</p>
+
                 <div class="logo"><img src="https://sybiltec.com/images/logos/sybiltec-logo-transparent.png" alt="Sybiltec logo">
             </div>
             </div>
