Reduce mentions of Bexley

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                             <li><span class="fa-li"><i class="fa-solid fa-circle-xmark smalli"></i></span></i><em>My web designer is too distant and extremely slow to respond. Even the smallest requests take ages to implement. I need someone with good communication who I can trust to get the job done quickly.</em></li>
                             <li><span class="fa-li"><i class="fa-solid fa-circle-xmark smalli"></i></span><em>I run my business on a very limited online presence. I need a website to expand my online presence beyond Facebook and Instagram.</em></li>
                             <li><span class="fa-li"><i class="fa-solid fa-circle-xmark smalli"></i></span><em>Our website hasn't been updated for over 10 years. It is built upon a very outdated technology. Upgrading to WordPress would allow us to build a website with a bespoke design that reflects our brand.</em></li>
-                            <li><span class="fa-li"><i class="fa-solid fa-circle-xmark smalli"></i></span><em>Out editing capabilities are very restricted. Any major changes to our website require the services of a web developer, and we are charged for every edit. We need a platform that allows us to make the changes ourselves.</em></li>
+                            <li><span class="fa-li"><i class="fa-solid fa-circle-xmark smalli"></i></span><em>Our editing capabilities are very restricted. Any major changes to our website require the services of a web developer, and we are charged for every edit. We need a platform that allows us to make the changes ourselves.</em></li>
                             <li><span class="fa-li"><i class="fa-solid fa-circle-xmark smalli"></i></span><em>Our eBay shop is becoming increasingly expensive to run and we are bound by their terms and conditions. A system like Shopify would be more cost effective and allow us full control over the look and feel of our store, as well as how we manage the customer experience.</em></li>
                         </ul>
                     </div>
@@ -498,7 +498,7 @@
                             data-form="5270027:e5c2j0">
                         </div>
                         <h4>Address</h4>
-                        <p>The Engine House Bexley,<br>2 Veridion Way,<br>Erith DA18 4AL</p>
+                        <p>The Engine House<br>2 Veridion Way<br>Erith DA18 4AL</p>
                     </div>
                     <div class="col-3">
                         <h4>Get in Touch</h4>
