--- a/website-design.html
+++ b/website-design.html
@@ -12,14 +12,14 @@
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Website Design in Bexley London for Small Businesses | Sybiltec</title>       
-        <meta name="Description" content="Small businesses in Bexley and surrounding areas can benefit from bespoke web design services offered by Sybiltec. Contact me today for a free consultation.">
+        <title>Web Design for Small Businesses, SMEs and Startups | Sybiltec</title>       
+        <meta name="Description" content="Small businesses, SMEs, startups and charities can benefit from bespoke web design services offered by Sybiltec. Contact me today for a free consultation.">
         <meta name="robots" content="all">
         <link rel="canonical" href="https://sybiltec.com/website-design">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Website Design in Bexley London for Small Businesses | Sybiltec" />
-        <meta property="og:description" content="Small businesses in Bexley and surrounding areas can benefit from bespoke web design services offered by Sybiltec. Contact me today for a free consultation." />
+        <meta property="og:title" content="Web Design for Small Businesses, SMEs and Startups | Sybiltec" />
+        <meta property="og:description" content="Small businesses, SMEs, startups and charities can benefit from bespoke web design services offered by Sybiltec. Contact me today for a free consultation." />
         <meta property="og:url" content="https://sybiltec.com/website-design" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
@@ -147,7 +147,7 @@
                     </ul>
 
                 <h2>The Service</h2>
-                <p>Are you looking for a <strong>web designer</strong> in <strong>Bexley</strong> or other areas within South East London? If so, then you've come to the right place! Your website may be in need of a refresh. Or, perhaps you have little or no online presence and you want to build your first website. Either way, my website design service would be perfect for you.</p>
+                <p>Are you looking for a experienced <strong>web designer</strong>? If so, then you've come to the right place! Your website may be in need of a refresh. Or, perhaps you have little or no online presence and you want to build your first website. Either way, my website design service would be perfect for you.</p>
 
                 <h3>Benefits of My Web Design Service</h3>
                 <ul>
@@ -371,11 +371,6 @@
                     <li>And surrounding areas</li>
                 </ul>
 
-                <div class="padding-bottom">
-                    <h2>A Message from Sybil</h2>
-                    <div class="videoWrapper"><iframe width="560" height="315" src="https://www.youtube.com/embed/DY-LbcK8Pf4?si=4LhzHk2A6KqWVqJw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-                </div>
-
             </div>
         </div>
         <div class="contact section">
@@ -419,7 +414,7 @@
                             data-form="5270027:e5c2j0">
                         </div>
                         <h4>Address</h4>
-                        <p>The Engine House Bexley,<br>2 Veridion Way,<br>Erith DA18 4AL</p>
+                        <p>The Engine House<br>2 Veridion Way<br>Erith DA18 4AL</p>
                     </div>
                     <div class="col-3">
                         <h4>Get in Touch</h4>
