Update privacy notice

--- a/privacy-notice.html
+++ b/privacy-notice.html
@@ -12,14 +12,14 @@
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Website Review | Erith Bexley South East London | Sybiltec</title>       
-        <meta name="Description" content="If you know that you need to make improvements to your website but you don't know where to start, consider utilising Sybil Mayard's website review service.">
+        <title>Privacy Notice | Web Designer South East London | Sybiltec</title>       
+        <meta name="Description" content="We take your data privacy concerns seriously and comply with all applicable laws. Read our privacy notice to learn how we collect, use and protect your data.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Website Review | Erith Bexley South East London | Sybiltec" />
-        <meta property="og:description" content="If you know that you need to make improvements to your website but you don't know where to start, consider utilising Sybil Mayard's website review service." />
-        <meta property="og:url" content="https://sybiltec.com/website-review" />
+        <meta property="og:title" content="Privacy Notice | Web Designer South East London | Sybiltec" />
+        <meta property="og:description" content="We take your data privacy concerns seriously and comply with all applicable laws. Read our privacy notice to learn how we collect, use and protect your data." />
+        <meta property="og:url" content="https://sybiltec.com/privacy-notice" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
@@ -28,7 +28,7 @@
         <meta name="twitter:label1" content="Written by">
         <meta name="twitter:data1" content="Sybil Mayard">
         <meta name="twitter:label2" content="Estimated reading time">
-        <meta name="twitter:data2" content="2 minutes">
+        <meta name="twitter:data2" content="5 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
         <meta name="geo.region" content="GB" />
         <meta name="geo.placename" content="London" />
@@ -94,7 +94,7 @@
         }
         }
         </script>
-        <link rel="canonical" href="https://sybiltec.com/website-review" />
+        <link rel="canonical" href="https://sybiltec.com/terms-and-conditions" />
         <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">    
     </head>
@@ -128,48 +128,115 @@
         </div>
         <div class="hero center">
             <div class="container-1140">
-                <h1>Website Review</h1>
-                <h2>Start With an Audit of Your Site</h2>
+                <h1>Privacy Notice</h1>
+                                
             </div>
         </div>
         <div class="main section">
-            <div class="container-1140 padding-top padding-bottom">
-                <p>If you know your website needs improvements but you don't know where to begin, start with a <strong>website review</strong>. This is a short analysis of your website which identifies issues within a range of areas, including but not limited to:</p>
+            <div class="container-1140">
+                <p>Last updated: 8 April 2024</p>
+                <h2>Our contact details</h2>
+                <p>Name: Sybil Mayard</p>
+                <p>Email: <a href="mailto:privacy@sybiltec.com" target="_blank">privacy@sybiltec.com</a></p>
+                <p>Address: The Engine House, 2 Veridion Way, Erith DA18 4AL</p>
+                <h2>The types of personal information we collect</h2>
+                <p>We may collect, use, store or transfer different kinds of personal data about you when you use our website or when you receive services or communication from us.</p>
+
+                <p>We have categorised the different kinds of personal data as follows:</p>
                 <ul>
-                    <li>User-friendliness</li>
-                    <li>Design</li>
-                    <li>Mobile responsiveness</li>
-                    <li>GDPR</li>
-                    <li>404 (page not found) errors</li>
-                    <li>Proofing errors</li>
-                    <li>Search engine optimisation (SEO)</li>
+                    <li>Identity data, which includes your first name and last name.</li>
+                    <li>Photographic images.</li>
+                    <li>Contact data, which means the data we use to contact you including your billing address, email address and mobile number.</li>
+                    <li>Financial data, which means the payment method and card association used to process your payments for your services. We do not process financial transactions. These are handled by the payment services providers, banks or financial institutions that we use.</li>
+                    <li>Communication data, which means details about communication you have made on our website including any information or other details you have provided in relation to the services you may purchase or request from us.</li>
+                    <li>Testimonials or client feedback that we will use to improve service quality.</li>
+                    <li>Technical data, which means details about the device(s) you use to access our website including your internet protocol (IP) / MAC address, browser type and version, location, browser plugin types and versions, referrer URL, hostname of the accessing computer, operating system and platform and other technology on the device(s) you use to access this website. This information will not be combined with data from other sources and we do not share such information with third parties other than service providers that we retain to support the operation of our website.</li>
+                    <li>Social media, which means that for your convenience, this website may contain hyperlinks to other websites that are not under our control, including Facebook, Instagram, YouTube, LinkedIn and Pinterest.</li>
+                    <li>Usage data, which includes information about how you use our website, products and services. This includes your browsing patterns and information such as how long you might spend on one of our webpages and what you look at and for on our website, the page that referred you to our site and the click stream during your visit to our website, page response times and page interaction information (clicks you make on a page).</li>
+                    <li>
+                        Profile data, which includes your email address, name and any details you share in the message fields or text boxes on this website.
+                        Marketing and communications data, which includes your preferences in receiving marketing from us and your communication preferences. We only use your data to provide you with the services you have requested or purchased. We do not use your data for any other purpose.
+                    </li>
                 </ul>
-                <p>The report will be provided to you in PDF format and includes recommended actions to resolve the issues.</p>
-                <p>Download a sample website review below:</p>
+                <h2>About cookies</h2>
+                <p>Cookies may be either “persistent” cookies or “session” cookies. A persistent cookie will be stored by a web browser and will remain valid until its set expiry date, unless deleted by the user before the expiry date.</p>
 
-                <div class="center"><a href="https://sybiltec.com/uploads/Sybiltec-Sample-Website-Review.pdf" target="_blank" rel="noopener noreferrer"><img src="https://sybiltec.com/images/Sybiltec-Sample-Website-Review.jpg" alt="Sybiltec sample website review" style="width: 100%; max-width: 560px;"></a></div>
+                <p>A session cookie will expire at the end of the user session, when the web browser is closed.</p>
 
-            <h2 class="padding-top">Website Review Clients</h2>
-            <div id="focus-on-learning" class="shadow-box-2">                         
-                <div class="row-2">
-                    <div class="col-5">   
-                        <img src="https://sybiltec.com/images/clients/focus-on-learning-2.jpg" alt="Focus on Learning">                         
-                    </div>
-                    <div class="col-7">
-                        <h2>Focus on Learning</h2>
-                        <h3 style="font-size: 18px;">Expert online English tuition by independent teachers</h3>
-                        <ul>
-                            <li>Website review</li>
-                        </ul>
-                        <div class="padding-btn">
-                            <a class ="btn-secondary" href="https://folenglish.com/"
-                            target="_blank" rel="noopener noreferrer">View Client</a>
-                        </div>
-                    </div>
-                </div>
+                <p>This site uses cookies.</p>
+                <h2>How we get the personal information and why we have it</h2>
+                <p>Most of the personal information we process is provided to us directly by you for one of the following reasons:</p>
+                <ul>
+                    <li>Direct interactions: by using our website, filling in forms or by corresponding and communicating directly with us by post, phone, email, in person or otherwise,</li>
+                    <li>Automated technologies or interactions: as you interact with us, we may automatically collect usage data and technical data about your equipment, browsing actions and patterns.</li>
+                </ul>
+
+                <p>We use the information in order to:</p>
+                <ul>
+                    <li>Respond to your enquiries,</li>
+                    <li>Provide you with website design, website development and other related technology services,</li>
+                    <li>Provide the services offered on the website,</li>
+                    <li>Send you marketing communication.</li>
+                </ul>
+
+                <p>Under the UK Data Protection Act 2018, the General Data Protection Regulation (GDPR) and applicable legislation, the lawful bases we rely on for processing this information are:</p>
+                <ul>
+                    <li><strong>(a) Your consent,</strong></li>
+                    <li><strong>(b) We have a contractual obligation,</strong></li>
+                    <li><strong>(c) We have a legal obligation,</strong></li>
+                    <li><strong>(d) We have a legitimate interest.</strong></li>
+                </ul>
+                <h2>How we store your personal information</h2>
+                <p>We take commercially reasonable efforts to protect against unauthorised access to or use of your personal data. Your information is securely stored.</p>
+
+                <p>In addition, we limit access to your personal data to those who have a business need to know.</p>
+
+                <p>We will only retain your personal data for as long as necessary to fulfil the purposes we collected it for.</p>
+                <h2>International transfers</h2>
+                <p>Some data processors and third parties that we use are based outside the United Kingdom, so their processing of your personal data will involve a transfer of data outside the United Kingdom.</p>
+
+                <p>Whenever we transfer your personal data out of the United Kingdom, we ensure a similar degree of protection is afforded to it.</p>
+                <h2>Annual updates to this privacy notice</h2>
+                <p>We keep our privacy notice under regular review to make sure it is up to date and accurate.</p>
+
+                <p>We will review and update this privacy notice every year.</p>
+                <h2>Your data protection rights</h2>
+                <p>Under certain circumstances, you have rights under data protection laws in relation to your personal data:</p>
+                <ul>
+                    <li><strong>Your right of access</strong> - You have the right to ask us for copies of your personal information.</li>
+                    <li><strong>Your right to rectification</strong> - You have the right to ask us to rectify personal information you think is inaccurate. You also have the right to ask us to complete information you think is incomplete.</li>
+                    <li><strong>Your right to erasure</strong> - You have the right to ask us to erase your personal information in certain circumstances.</li>
+                    <li><strong>Your right to restriction of processin</strong>g - You have the right to ask us to restrict the processing of your personal information in certain circumstances.</li>
+                    <li><strong>Your right to object to processing</strong> - You have the right to object to the processing of your personal information in certain circumstances.</li>
+                    <li><strong>Your right to data portability</strong> - You have the right to ask that we transfer the personal information you gave us to another organisation, or to you, in certain circumstances.</li>
+                </ul>
+
+                <p>You are not required to pay any charge for exercising your rights. If you make a request, we have one month to respond to you.</p>
+
+                <p>Please contact us at <a href="mailto:privacy@sybiltec.com" target="_blank">privacy@sybiltec.com</a> if you wish to make a request.</p>
+                <h2>How to complain</h2>
+                <p>If you have any concerns about our use of your personal information under the UK Data Protection Act 2018 or GDPR, you can make a complaint to us at <a href="mailto:privacy@sybiltec.com" target="_blank">privacy@sybiltec.com</a>.</p>
+
+                <p>You can also complain to the Information Commissioner's Office (the ICO), if you are unhappy with how we have used your data. The ICO's contact details are as follows:</p>
+
+                <p>
+                    <strong>Address:</strong><br>
+                    Information Commissioner's Office<br>
+                    Wycliffe House<br>
+                    Water Lane<br>
+                    Wilmslow<br>
+                    Cheshire<br>
+                    SK9 5AF<br>
+                </p>
+
+                <p><strong>Helpline number:</strong> <a href="tel:03031231113">0303 123 1113</a></p>
+
+                <p><strong>Website:</strong> <a href="https://ico.org.uk/" target="_blank" rel="noreferrer noopener">https://ico.org.uk/</a></p> 
+
+                <p>&copy; 2024 GRC Information Management</p>
+
             </div>
         </div>
-    </div>
         <div class="contact section">
             <div class="container-1140">
                 <div class="row">
