--- a/sitemap.html
+++ b/sitemap.html
@@ -113,6 +113,7 @@
                                         <a href="/">Home</a>
                                         <a href="https://sybiltec.com/about">About</a>
                                         <a href="https://sybiltec.com/services">Services</a>
+                                        <a href="https://sybiltec.com/web-design-bexley">Web Design Bexley</a>
                                         <a href="https://sybiltec.com/clients">Clients</a>
                                         <a href="https://sybiltec.com/faqs">FAQs</a>
                                         <a href="https://sybiltec.com/blog">Blog</a>
@@ -220,6 +221,7 @@
                         <p><a href="https://sybiltec.com/leaflet-design">Leaflet Design</a></p>
                         <p><a href="https://sybiltec.com/training">Training</a></p>
                         <p><a href="https://sybiltec.com/website-design">Web Design</a></p>
+                        <p><a href="https://sybiltec.com/web-design-bexley">Web Design Bexley</a></p>
                         <p><a href="https://sybiltec.com/website-development">Web Development</a></p>
                         <p><a href="https://sybiltec.com/website-maintenance">Website Maintenance</a></p>
                         <p><a href="https://sybiltec.com/website-review">Website Review</a></p>
