--- a/ecommerce-websites.html
+++ b/ecommerce-websites.html
@@ -305,6 +305,88 @@
                         </div>
                     </div>
                 </div>
+
+                <div id="wardells-wardrobe" class="shadow-box-2">                         
+                    <div class="row-2">
+                        <div class="col-5">   
+                            <img src="https://sybiltec.com/images/clients/wardells-wardrobe-2.jpg" alt="Wardell's Wardrobe">                         
+                        </div>
+                        <div class="col-7">
+                            <h2>Wardell's Wardrobe</h2>
+                            <h3 style="font-size: 18px;">Stockist of The Bamboo Wardrobe and lots more for both ladies and gentlemen</h3>
+                            <ul>
+                                <li>Colour swatches</li>
+                                <li>Out of stock email notifications</li>
+                                <li>Theme customisations</li>
+                                <li>Google Search Console submission</li>
+                            </ul>  
+                            <div class="padding-btn">
+                                <a class ="btn-secondary" href="https://wardellswardrobe.com"
+                                target="_blank" rel="noopener noreferrer">View Client</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="bamboo-wardrobe" class="shadow-box-2">                         
+                    <div class="row-2">
+                        <div class="col-5">   
+                            <img src="https://sybiltec.com/images/clients/The-Bamboo-Wardrobe-2.jpg" alt="The Bamboo Wardrobe">                         
+                        </div>
+                        <div class="col-7">
+                            <h2>The Bamboo Wardrobe</h2>
+                            <h3 style="font-size: 18px;">Wholesale women's bamboo clothing</h3>
+                            <ul>
+                                <li>Shopify store development</li>
+                                <li>Product management</li>
+                                <li>New customer email notifications</li>
+                                <li>New customer application form</li>
+                                <li>Google Search Console submission</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="esme-learning-solutions" class="shadow-box-2">                         
+                    <div class="row-2">
+                        <div class="col-5">   
+                            <img src="https://sybiltec.com/images/clients/Esme-Learning-Solutions-2.jpg" alt="Esme Learning Solutions">                         
+                        </div>
+                        <div class="col-7">
+                            <h2>Esme Learning Solutions</h2>
+                            <h3 style="font-size: 18px;">Professional development courses from top-tier universities powered by next-gen AI learning</h3>
+                            <ul>
+                                <li>Website maintenance</li>
+                                <li>Product management</li>
+                                <li>Theme customisations</li>
+                                <li>HubSpot integration</li>
+                                <li>User acceptance testing</li>
+                                <li>Landing page creation in Shogun</li>
+                                <li>Course registration form</li>
+                            </ul>      
+                        </div>
+                    </div>
+                </div>
+
+                <div id="kyosk" class="shadow-box-2">                         
+                    <div class="row-2">
+                        <div class="col-5">   
+                            <img src="https://sybiltec.com/images/clients/KYOSK.jpg" alt="KYOSK website">                         
+                        </div>
+                        <div class="col-7">
+                            <h2>KYOSK</h2>
+                            <h3 style="font-size: 18px;">Antibacterial phone booths for open space areas</h3>
+                            <ul>
+                                <li>Website development</li>
+                                <li>Theme customisations</li>
+                                <li>Image gallery carousel with Slick</li>
+                                <li>Tidio chat bot setup</li>
+                                <li>Google Search Console submission</li>
+                            </ul>          
+                        </div>
+                    </div>
+                </div>
+
                 <p>Are you a business owner in <strong>Bexley</strong> or the surrounding areas looking to build an <strong>e-commerce website</strong>? <a href="https://sybiltec.com/contact">Contact me</a> today.</p>
             </div>
         </div>
