Remove Website Development

--- a/services.html
+++ b/services.html
@@ -169,11 +169,11 @@
                 <div class="row">
                     <div class="col-4">
                         <div class="offer-card center">
-                            <i class="fas fa-code"></i>
-                    <h3>Website Development</h3>
-                    <p>Bespoke website development services tailored to your needs, including one-off tasks, design improvements and error fixing. Perfect for when you need support on an ad-hoc basis.</p>
+                            <i class="fa-regular fa-file-image"></i>
+                    <h3>Leaflet Design</h3>
+                    <p>If you need a flyer, poster or social media graphic created for your upcoming event, choose my leaflet design service.</p>
                     <div class="center padding-bottom padding-top">
-                        <a class="btn-primary" href="https://sybiltec.com/website-development">Web Development</a>   
+                        <a class="btn-primary" href="https://sybiltec.com/leaflet-design">Leaflet Design</a>   
                     </div>
                     </div>
                     </div>
@@ -230,7 +230,6 @@
                         <p><a href="https://sybiltec.com/ecommerce-websites">E-commerce Websites</a></p>
                         <p><a href="https://sybiltec.com/website-review">Website Review</a></p>
                         <p><a href="https://sybiltec.com/website-design">Web Design</a></p>
-                        <p><a href="https://sybiltec.com/website-development">Web Development</a></p>
                         <p><a href="https://sybiltec.com/website-maintenance">Website Maintenance</a></p>
                         <p><a href="https://sybiltec.com/training">Training</a></p>
                         <p><a href="https://sybiltec.com/leaflet-design">Leaflet Design</a></p>
