--- a/sitemap.html
+++ b/sitemap.html
@@ -155,7 +155,7 @@
                     <li><a href="https://sybiltec.com/leaflet-design">Leaflet Design</a></li>
                     <li><a href="https://sybiltec.com/training">Training</a></li>
                     <li><a href="https://sybiltec.com/website-design">Web Design</a></li>
-                    <li><a href="https://sybiltec.com/website-development">Web Development</a></li>
+                    <li><a href="https://sybiltec.com/web-design-bexley">Web Design Bexley</a></li>
                     <li><a href="https://sybiltec.com/website-maintenance">Website Maintenance</a></li>
                     <li><a href="https://sybiltec.com/website-review">Website Review</a></li>
                 </ul>
@@ -222,7 +222,6 @@
                         <p><a href="https://sybiltec.com/training">Training</a></p>
                         <p><a href="https://sybiltec.com/website-design">Web Design</a></p>
                         <p><a href="https://sybiltec.com/web-design-bexley">Web Design Bexley</a></p>
-                        <p><a href="https://sybiltec.com/website-development">Web Development</a></p>
                         <p><a href="https://sybiltec.com/website-maintenance">Website Maintenance</a></p>
                         <p><a href="https://sybiltec.com/website-review">Website Review</a></p>
                     </div>
