Update Privacy Notice link on sitemap.html

--- a/sitemap.html
+++ b/sitemap.html
@@ -144,7 +144,7 @@
                     <li><a href="https://sybiltec.com/contact">Contact</a></li>
                     <li><a href="https://sybiltec.com/faqs">FAQs</a></li>
                     <li><a href="https://sybiltec.com/">Home</a></li>
-                    <li><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Notice</a></li>
+                    <li><a href="https://sybiltec.com/privacy-notice">Privacy Notice</a></li>
                     <li><a href="https://sybiltec.com/projects">Projects</a></li>
                     <li><a href="https://sybiltec.com/services">Services</a></li>
                     <li><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></li>
