--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -197,12 +197,12 @@
                     4.8. We shall not be liable to you for any loss or expense which is:<br>
                     4.8.1 indirect or consequential loss; or<br>
                     4.8.2 economic loss or other loss of turnover, profits, business or goodwill even if such loss was reasonably foreseeable or we knew you might incur it.<br>
-                    4.9. This paragraph (and any other paragraph which excludes or restricts our liability) applies to our directors, officers, employees, subcontractors, agents and affiliated companies (who may enforce this clause under the Contracts (Rights of Third Parties) Act 1999 as well as to ourselves.<br>
+                    4.9. This paragraph (and any other paragraph which excludes or restricts our liability) applies to our directors, officers, employees, subcontractors, agents and affiliated companies (who may enforce this clause under the Contracts (Rights of Third Parties) Act 1999) as well as to ourselves.<br>
                 </p>
 
                 <h2>5. Miscellaneous matters</h2>
                 <p>
-                    5.1. Our privacy policy is strong and precise. It complies fully with the Data Protection Act 2018 which is located <a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">here</a>.<br>
+                    5.1. Our privacy policy is strong and precise. It complies fully with the Data Protection Act 2018 which is located <a href="https://sybiltec.com/privacy-notice">here</a>.<br>
                     5.2. If any term or provision of this agreement is at any time held by any jurisdiction to be void, invalid or unenforceable, then it shall be treated as changed or reduced, only to the extent minimally necessary to bring it within the laws of that jurisdiction and to prevent it from being void and it shall be binding in that changed or reduced form. Subject to that, each provision shall be interpreted as severable and shall not in any way affect any other of these terms.<br>
                     5.3. No failure or delay by any party to exercise any right, power or remedy will operate as a waiver of it nor indicate any intention to reduce that or any other right in the future.<br>
                     5.4. Any communication to be served on either party by the other shall be delivered by hand or sent by first class post or by e-mail.<br>
