--- a/6-tips-for-surviving-remote-working.html
+++ b/6-tips-for-surviving-remote-working.html
@@ -117,6 +117,9 @@
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">    
     </head>
     <body>
+        <div class="announcement-bar">
+            <a href="https://sybiltec.com/web-design-bexley">Click Here for Subsidised Web Design Services for Bexley Businesses</a>
+        </div>
         <div class="header">
                 <div class="container-1140">
                     <div class="row">
@@ -131,7 +134,6 @@
                                         <a href="/">Home</a>
                                         <a href="https://sybiltec.com/about">About</a>
                                         <a href="https://sybiltec.com/services">Services</a>
-                                        <a href="https://sybiltec.com/web-design-bexley">Web Design Bexley</a>
                                         <a href="https://sybiltec.com/clients">Clients</a>
                                         <a href="https://sybiltec.com/faqs">FAQs</a>
                                         <a href="https://sybiltec.com/blog">Blog</a>
