--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
         <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TDTVSWH3"
         height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <!-- End Google Tag Manager (noscript) -->
+        <div class="announcement-bar">
+            <a href="https://sybiltec.com/web-design-bexley">Click Here for Subsidised Web Design Services for Bexley Businesses</a>
+        </div>
         <div class="header">
                 <div class="container-1140">
                     <div class="row">
@@ -124,7 +127,6 @@
                                         <a href="/">Home</a>
                                         <a href="https://sybiltec.com/about">About</a>
                                         <a href="https://sybiltec.com/services">Services</a>
-                                        <a href="https://sybiltec.com/web-design-bexley">Web Design Bexley</a>
                                         <a href="https://sybiltec.com/clients">Clients</a>
                                         <a href="https://sybiltec.com/faqs">FAQs</a>
                                         <a href="https://sybiltec.com/blog">Blog</a>
