--- a/6-reasons-to-use-shopify.html
+++ b/6-reasons-to-use-shopify.html
@@ -28,6 +28,27 @@
               ]
             }
         </script>
+        <script type="application/ld+json">
+            {
+              "@context": "https://schema.org",
+              "@type": "BreadcrumbList",
+              "itemListElement": [{
+                "@type": "ListItem",
+                "position": 1,
+                "name": "Home",
+                "item": "https://sybiltec.com/"
+              },{
+                "@type": "ListItem",
+                "position": 2,
+                "name": "Blog Page 3",
+                "item": "https://sybiltec.com/blog-3"
+              },{
+                "@type": "ListItem",
+                "position": 3,
+                "name": "7 Reasons Why You Should Be Using Shopify"
+              }]
+            }
+        </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>7 Reasons Why You Should be Using Shopify | Sybiltec</title>       
