--- a/accessible-website-design.html
+++ b/accessible-website-design.html
@@ -28,6 +28,27 @@
               ]
             }
         </script>
+        <script type="application/ld+json">
+            {
+              "@context": "https://schema.org",
+              "@type": "BreadcrumbList",
+              "itemListElement": [{
+                "@type": "ListItem",
+                "position": 1,
+                "name": "Home",
+                "item": "https://sybiltec.com/"
+              },{
+                "@type": "ListItem",
+                "position": 2,
+                "name": "Blog",
+                "item": "https://sybiltec.com/blog"
+              },{
+                "@type": "ListItem",
+                "position": 3,
+                "name": "Accessible Design: Creating an Inclusive Website"
+              }]
+            }
+        </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Accessible Design: Creating an Inclusive Website | Sybiltec</title>       
