--- a/building-online-store-using-shopify.html
+++ b/building-online-store-using-shopify.html
@@ -50,6 +50,27 @@
                 }
             }
         </script>
+        <script type="application/ld+json">
+            {
+              "@context": "https://schema.org",
+              "@type": "BreadcrumbList",
+              "itemListElement": [{
+                "@type": "ListItem",
+                "position": 1,
+                "name": "Home",
+                "item": "https://sybiltec.com/"
+              },{
+                "@type": "ListItem",
+                "position": 2,
+                "name": "Blog",
+                "item": "https://sybiltec.com/blog"
+              },{
+                "@type": "ListItem",
+                "position": 3,
+                "name": "Free Webinar: Building an Online Store Using Shopify"
+              }]
+            }
+        </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Free Webinar: Building an Online Store Using Shopify | Sybiltec</title>       
