--- a/ecommerce-websites.html
+++ b/ecommerce-websites.html
@@ -10,6 +10,27 @@
             gtag('js', new Date());
             gtag('config', 'G-XVK8SSNQSC');
         </script>
+        <script type="application/ld+json">
+            {
+              "@context": "https://schema.org",
+              "@type": "BreadcrumbList",
+              "itemListElement": [{
+                "@type": "ListItem",
+                "position": 1,
+                "name": "Home",
+                "item": "https://sybiltec.com/"
+              },{
+                "@type": "ListItem",
+                "position": 2,
+                "name": "Services",
+                "item": "https://sybiltec.com/services"
+              },{
+                "@type": "ListItem",
+                "position": 3,
+                "name": "E-commerce Websites"
+              }]
+            }
+        </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>E-commerce Websites | Erith South East London | Sybiltec</title>       
