--- a/faqs.html
+++ b/faqs.html
@@ -11,6 +11,22 @@
             gtag('config', 'G-XVK8SSNQSC');
         </script>
         <script type="application/ld+json">
+          {
+            "@context": "https://schema.org",
+            "@type": "BreadcrumbList",
+            "itemListElement": [{
+              "@type": "ListItem",
+              "position": 1,
+              "name": "Home",
+              "item": "https://sybiltec.com/"
+            },{
+              "@type": "ListItem",
+              "position": 2,
+              "name": "FAQs"
+            }]
+          }
+      </script>
+        <script type="application/ld+json">
             {
               "@context": "https://schema.org",
               "@type": "FAQPage",
