--- a/fix-slow-wordpress-website.html
+++ b/fix-slow-wordpress-website.html
@@ -28,6 +28,27 @@
               ]
             }
         </script>
+        <script type="application/ld+json">
+            {
+              "@context": "https://schema.org",
+              "@type": "BreadcrumbList",
+              "itemListElement": [{
+                "@type": "ListItem",
+                "position": 1,
+                "name": "Home",
+                "item": "https://sybiltec.com/"
+              },{
+                "@type": "ListItem",
+                "position": 2,
+                "name": "Blog Page 2",
+                "item": "https://sybiltec.com/blog-2"
+              },{
+                "@type": "ListItem",
+                "position": 3,
+                "name": "10 Reasons Why Your WordPress Website is Slow (and How to Fix Them)"
+              }]
+            }
+        </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>10 Reasons Why Your WordPress Website is Slow | Sybiltec</title>       
