Revise certifications on About page

--- a/about.html
+++ b/about.html
@@ -220,25 +220,22 @@
                     <div class="row">
                         <div class="col-3">
                             <h4>Foundations of User Experience (UX) Design</h4>
-                                <img src="https://sybiltec.com/images/certifications/foundations-of-user-experience-ux-design.png"
-                                    alt="Foundations of User Experience (UX) Design certificate">
-                        </div>
-                        <div class="col-3">
-                            <h4>The Fundamentals of Digital Marketing</h4>
-                                <img src="https://sybiltec.com/images/certifications/sybil-mayard-google-digital-garage-fundamentals-of-digital-marketing-thumbnail.png"
-                                    alt="Google Digital Garage The Fundamentals of Digital Marketing certificate">
-                        </div>
-                        <div class="col-3">
-                        <h4>Yoast Academy Certified</h4>
-                        <a href="https://academy.yoast.com/certificate/2558/668718/ecee89c40963da4261cb749c95b38b68/1/" 
-                            target="_blank" rel="noopener noreferrer">
-                            <img src="https://sybiltec.com/images/certifications/sybil-mayard-yoast-for-beginners-certificate.png"
-                                alt="Yoast for Beginners certificate"></a>
+                                <img src="images/certifications/coursera-google-foundations-of-user-experience-ux-design.png"
+                                    alt="Coursera Google Foundations of User Experience (UX) Design certificate">
                         </div>
                         <div class="col-3">
                             <h4>The Complete 2022 Software Testing Bootcamp</h4>
-                                <img src="https://sybiltec.com/images/certifications/udemy-the-complete-2022-software-testing-bootcamp.jpeg"
+                            <img src="images/certifications/udemy-the-complete-2022-software-testing-bootcamp.jpg"
                                     alt="Udemy The Complete 2022 Software Testing Bootcamp">
+                        </div>
+                        <div class="col-3">
+                            <h4>Yoast SEO Academy: SEO for Beginners Certified</h4>
+                            <a href="https://academy.yoast.com/certificate/2558/668718/ecee89c40963da4261cb749c95b38b68/1/" target="_blank"><img src="https://academy.yoast.com/badge/2558/668718/ecee89c40963da4261cb749c95b38b68/1/" width="200" alt="Sybil Mayard successfully completed the SEO for beginners course!"/></a>
+                        </div>
+                        <div class="col-3">
+                            <h4>The Fundamentals of Digital Marketing</h4>
+                            <img src="images/certifications/google-digital-garage-fundamentals-of-digital-marketing.png"
+                                    alt="Google Digital Garage The Fundamentals of Digital Marketing certificate">
                         </div>
                     </div>
                 </div>
@@ -246,26 +243,6 @@
 
             </div>
         </div>
-
-                <!-- <div class="row center">
-                    <h2>A web designer and developer based in South East London</h2>
-                    <div class="col-4">
-                        <h3>Who I Am</h3>
-                        <hr>
-                        <p>A freelance website designer and MSc Computer Science graduate from the University of Kent.</p>
-                    </div>
-                    <div class="col-4">
-                        <h3>My Mission</h3>
-                        <hr>
-                        <p>To assist small businesses with utilising the power of the Internet to achieve their online ambitions.</p>
-                    </div>
-                    <div class="col-4">
-                        <h3>What I Do</h3>
-                        <hr>
-                        <p>I work together with small business owners and provide personalised services to suit their requirements.</p>
-                    </div>
-                </div> -->
-
             <div class="events section center">
                 <div class="container-1140">
                     <h2>Key Skills</h2>
