--- a/index.html
+++ b/index.html
@@ -386,6 +386,21 @@
                 <div class="row">
                     <div class="col-4">  
                         <div class="blog-card">   
+                            <a href="https://sybiltec.com/ways-to-speed-up-your-windows-pc">
+                                <img src="images/white-and-blue-analogue-tachometer-gauge.jpg" 
+                                alt="Bexley Talking Business - Business Support"></a>
+                            <div class="blog-card-text">                    
+                                <h3>8 Ways to Speed Up Your Windows PC</h3>
+                                <p>17 April 2024</p>
+                                <p>Are you suffering from a slow PC? Read our latest post on how to make your computer or laptop run faster.</p>
+                                <div class="padding-bottom padding-top">
+                                    <a class="btn-primary" href="https://sybiltec.com/ways-to-speed-up-your-windows-pc">Speed Up My PC!</a>   
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">  
+                        <div class="blog-card">   
                             <a href="https://sybiltec.com/user-experience-ux"><img src="images/white-and-black-laptop-400x209.jpg" alt="White and black laptop"></a>
                                 <div class="blog-card-text">                      
                                 <h3>How to Improve the User Experience of Your Website</h3>
@@ -407,21 +422,6 @@
                                 <p>Read the article for an introduction to accessibility and quick tips on how to create a website that caters to users with impairments and disabilities.</p>
                                 <div class="padding-bottom padding-top">
                                     <a class="btn-primary" href="https://sybiltec.com/accessible-website-design">Accessible Design</a>   
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-4">  
-                        <div class="blog-card">   
-                            <a href="https://sybiltec.com/bexley-talking-business">
-                                <img src="images/logos/TB-Business-Support.png" 
-                                alt="Bexley Talking Business - Business Support"></a>
-                            <div class="blog-card-text">                    
-                                <h3>Bexley Talking Business</h3>
-                                <p>14 December 2023 | by Sybil Mayard</p>
-                                <p>If you are an SME/sole trader based in Bexley, you may be eligible for free business support. Start your registration now.</p>
-                                <div class="padding-bottom padding-top">
-                                    <a class="btn-primary" href="https://sybiltec.com/bexley-talking-business">Get Business Support</a>   
                                 </div>
                             </div>
                         </div>
