Add Big Red Directory

--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -294,6 +294,9 @@
                         </p> 
                         <p>
                             <a href="https://www.bexley.org.uk/web-designers/" rel="noopener noreferrer" target="_blank"><img alt="Bexley Web Designers" src="https://www.bexley.org.uk/Images/LinkLogos/Small/Bexley.gif" /></a>
+                        </p>      
+                        <p>
+                            <a href="https://www.bigreddirectory.com"><img src="https://www.bigreddirectory.com/hp/images/link1.gif" alt="UK opening hours" width="200" height="46" border="0"></a>
                         </p>                      
                     </div>
                 </div>
