--- a/website-design.html
+++ b/website-design.html
@@ -362,7 +362,7 @@
                     </div>
                 </div>
 
-                <h2>Areas Covered</h2>
+                <h2>Areas Covered in South East London</h2>
                 <ul>
                     <li>Abbey Wood</li>
                     <li>Barnehurst</li>
@@ -384,12 +384,16 @@
                     <li>Northumberland Heath</li>
                     <li>Plumstead</li>
                     <li>Sidcup</li>
+                    <li>Slade Green</li>
                     <li>Thamesmead</li>
                     <li>Welling</li>
                     <li>Woolwich</li>
-                    <li>And surrounding areas</li>
                 </ul>
-
+                <h2>Additional Areas Covered</h2>
+                <ul>
+                    <li>Kent</li>
+                    <li>Surrey</li>
+                </ul>
             </div>
         </div>
         <div class="contact section">
