--- a/website-design.html
+++ b/website-design.html
@@ -392,7 +392,7 @@
                 <h2>Additional Areas Covered</h2>
                 <ul>
                     <li>Kent</li>
-                    <li>Surrey</li>
+                    <li><a href="https://sybiltec.com/web-design-surrey">Surrey</a></li>
                 </ul>
             </div>
         </div>
