--- a/web-design-surrey.html
+++ b/web-design-surrey.html
@@ -22,20 +22,21 @@
               },{
                 "@type": "ListItem",
                 "position": 2,
-                "name": "Sitemap"
+                "name": "Web Design Services in Surrey"
               }]
             }
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Sitemap | South East London Web Design | Sybiltec</title>       
-        <meta name="Description" content="Sybiltec offers web design and development services to SMEs in South East London and other areas. View the sitemap for easy navigation of my website.">
+        <title>Web Design Services in Surrey | Sybiltec</title>       
+        <meta name="Description" content="Web design and development services are available to Surrey small businesses. Contact us today to find out how we can elevate your online presence.">
         <meta name="robots" content="all">
+        <link rel="canonical" href="https://sybiltec.com/web-design-surrey">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Sitemap | South East London Web Design | Sybiltec" />
-        <meta property="og:description" content="Sybiltec offers web design and development services to SMEs in South East London and other areas. View the sitemap for easy navigation of my website." />
-        <meta property="og:url" content="https://sybiltec.com/sitemap" />
+        <meta property="og:title" content="Web Design Services in Surrey | Sybiltec" />
+        <meta property="og:description" content="Web design and development services are available to Surrey small businesses. Contact us today to find out how we can elevate your online presence." />
+        <meta property="og:url" content="https://sybiltec.com/web-design-surrey" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
@@ -44,7 +45,7 @@
         <meta name="twitter:label1" content="Written by">
         <meta name="twitter:data1" content="Sybil Mayard">
         <meta name="twitter:label2" content="Estimated reading time">
-        <meta name="twitter:data2" content="5 minutes">
+        <meta name="twitter:data2" content="2 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
         <meta name="geo.region" content="GB" />
         <meta name="geo.placename" content="London" />
@@ -110,14 +111,10 @@
         }
         }
         </script>
-        <link rel="canonical" href="https://sybiltec.com/sitemap" />
         <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">    
     </head>
     <body>
-        <div class="announcement-bar">
-            <a href="https://sybiltec.com/web-design-bexley">Click Here for Subsidised Web Design Services for Bexley Businesses</a>
-        </div>
         <div class="header">
                 <div class="container-1140">
                     <div class="row">
@@ -147,67 +144,110 @@
         </div>
         <div class="hero center">
             <div class="container-1140">
-                <h1>Sitemap</h1>
+                <h1>Web Design Services in Surrey</h1>
             </div>
         </div>
         <div class="main section">
-            <div class="container-1140">
-                <h2>Main</h2>
+            <div class="container-1140 padding-top padding-bottom">
+                <h2>The Importance of a Website for Your Small Business</h2>
+                <p>Standing out in an increasingly competitive market is one of the biggest challenges for the small businesses of today. Being present on a few social media platforms is no longer sufficient to develop a successful business. You must combine a range of methods to form an effective marketing strategy, and your website should be central to that strategy.</p>
+
+                <p>Why should your website be at the core of your marketing? Because it is the one thing that you truly own and control. Additionally, running a business without a website can mean that you miss out on valuable opportunities to increase enquiries, leads, and make sales.</p>
+
+                <p>Here are a few reasons why you need a website:</p>
                 <ul>
-                    <li><a href="https://sybiltec.com/about">About</a></li>
-                    <li><a href="https://sybiltec.com/blog">Blog Page 1</a></li>
-                    <li><a href="https://sybiltec.com/blog-2">Blog Page 2</a></li>
-                    <li><a href="https://sybiltec.com/blog-3">Blog Page 3</a></li>
-                    <li><a href="https://sybiltec.com/clients">Clients</a></li>
-                    <li><a href="https://sybiltec.com/contact">Contact</a></li>
-                    <li><a href="https://sybiltec.com/faqs">FAQs</a></li>
-                    <li><a href="https://sybiltec.com/">Home</a></li>
-                    <li><a href="https://sybiltec.com/privacy-notice">Privacy Notice</a></li>
-                    <li><a href="https://sybiltec.com/projects">Projects</a></li>
-                    <li><a href="https://sybiltec.com/services">Services</a></li>
-                    <li><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></li>
+                    <li>A website works for you 24/7 </li>
+                    <li>A website helps to build trust with your potential customers. Many people won't even consider purchasing from a business that doesn't have a website</li>
+                    <li>You have full control over the look and feel of the design and functionality. Social media platforms don't offer you this level of freedom</li>
+                    <li>Organic search traffic is still one of the best ways to generate qualified leads.</li>
                 </ul>
-                <h2>Services</h2>
+
+                <p>If you do not already have a website, it's time to start thinking about building one. Or, if you have an existing site but it's not working for you for any reason, consider restructuring or redesigning it. Are you a <strong>small business owner in Surrey</strong> seeking support with your website? Contact us today to find out how we can help.</p>
+
+                <h2>Why Choose Sybiltec's Services</h2>
+                <p>At Sybiltec, we understand what makes websites work. We'll build a website for you that meets your business' individual needs. Here's how you'll benefit from the service:</p>
                 <ul>
-                    <li><a href="https://sybiltec.com/ecommerce-websites">E-commerce Websites</a></li>
-                    <li><a href="https://sybiltec.com/leaflet-design">Leaflet Design</a></li>
-                    <li><a href="https://sybiltec.com/training">Training</a></li>
-                    <li><a href="https://sybiltec.com/website-design">Web Design</a></li>
-                    <li><a href="https://sybiltec.com/web-design-bexley">Web Design Bexley</a></li>
-                    <li><a href="https://sybiltec.com/web-design-surrey">Web Design Surrey</a></li>
-                    <li><a href="https://sybiltec.com/website-maintenance">Website Maintenance</a></li>
-                    <li><a href="https://sybiltec.com/website-review">Website Review</a></li>
+                    <li>We can make a start on your project right away and you'll be sent regular updates on the progress of your project, so you won't be kept waiting</li>
+                    <li>You'll receive a high quality service without the high costs that agencies charge</li>
+                    <li>You'll receive a custom design that's aligned with your business' unique brand and values</li>
+                    <li>You will be able to edit the website yourself after it has launched, saving you time and money</li>
+                    <li>We will communicate with you using jargon-free language</li>
                 </ul>
-                <h2>Blog Posts</h2>
-                <ul>
-                    <li><a href="https://sybiltec.com/5-best-tools-for-remote-working">5 Best Tools for Remote Working</a></li>
-                    <li><a href="https://sybiltec.com/6-reasons-to-use-shopify">7 Reasons Why You Should be Using Shopify</a></li>
-                    <li><a href="https://sybiltec.com/ways-to-speed-up-your-windows-pc">8 Ways to Speed Up Your Windows PC</a></li>
-                    <li><a href="https://sybiltec.com/user-experience-ux">9 Ways to Improve the UX (User Experience) of Your Website</a></li>
-                    <li><a href="https://sybiltec.com/best-free-wordpress-plugins">10 Best Free WordPress Plugins</a></li>
-                    <li><a href="https://sybiltec.com/common-website-mistakes">10 Common Website Mistakes and How to Avoid Them</a></li>
-                    <li><a href="https://sybiltec.com/fix-slow-wordpress-website">10 Reasons Why Your WordPress Website is Slow (and How to Fix Them)</a></li>
-                    <li><a href="https://sybiltec.com/guide-to-updating-your-wordpress-website">A Guide to Updating Your WordPress Website</a></li>
-                    <li><a href="https://sybiltec.com/accessible-website-design">Accessible Design: Creating an Inclusive Website</a></li>
-                    <li><a href="https://sybiltec.com/are-you-inadvertently-abusing-your-customers-data">Are You Inadvertently Abusing Your Customers' Data?</a></li>
-                    <li><a href="https://sybiltec.com/bexley-talking-business">Bexley Talking Business</a></li>
-                    <li><a href="https://sybiltec.com/cyber-security-best-practices-for-business">Cyber Security Best Practices for You and Your Business</a></li>
-                    <li><a href="https://sybiltec.com/building-online-store-using-shopify">Free Webinar: Building an Online Store Using Shopify</a></li>
-                    <li><a href="https://sybiltec.com/digital-marketing-strategy">Free Webinar: Developing a Digital Marketing Strategy</a></li>
-                    <li><a href="https://sybiltec.com/how-does-a-good-website-showcase-trust">How Does a Good Website Showcase Trust?</a></li>
-                    <li><a href="https://sybiltec.com/upgrade-google-analytics-4">How Do I Upgrade to Google Analytics 4?</a></li>
-                    <li><a href="https://sybiltec.com/backup-wordpress-website-using-updraftplus">How to Backup Your WordPress Website with UpdraftPlus</a></li>
-                    <li><a href="https://sybiltec.com/how-to-choose-web-designer">How to Choose a Web Designer</a></li>
-                    <li><a href="https://sybiltec.com/improve-website-seo">How to Improve the SEO of Your Website</a></li>
-                    <li><a href="https://sybiltec.com/install-ga4-shopify-website">How to Install GA4 on Your Shopify Website</a></li>
-                    <li><a href="https://sybiltec.com/install-ga4-wix-website">How to Install GA4 on Your Wix Website</a></li>
-                    <li><a href="https://sybiltec.com/install-ga4-wordpress-website">How to Install GA4 on Your WordPress Website</a></li>
-                    <li><a href="https://sybiltec.com/google-search-console">How to Use Google Search Console: a Quick Guide</a></li>
-                    <li><a href="https://sybiltec.com/6-tips-for-surviving-remote-working">Remote Working: How to Survive with 6 Tips</a></li>
-                    <li><a href="https://sybiltec.com/shopify-woocommerce">Shopify vs WooCommerce: What Are the Differences?</a></li>
-                    <li><a href="https://sybiltec.com/importance-of-contact-information-on-your-website">The Importance of Contact Information on Your Website</a></li>
-                    <li><a href="https://sybiltec.com/web-design-process-explained-12-easy-steps">The Web Design Process Explained in 12 Easy Steps</a></li>   
-                </ul>
+
+                </div>
+
+                </div>
+
+                <div class="center padding-top padding-bottom grey">
+                    <h2>Ready to Get Started?</h2>
+                    <div class="padding-top padding-bottom"><a class="btn-primary" href="https://sybiltec.com/contact">Contact Us Today!</a></div>
+                </div>
+
+                <div class="main section">
+                <div class="container-1140 padding-top padding-bottom">
+                <h2>Web Design Clients in Surrey</h2>
+                <p>We have worked with charities and small businesses in Surrey to help improve their websites and online presence. Below are some examples.</p>
+
+                <div id="new-haw-community-centre" class="shadow-box-2">                         
+                    <div class="row-2">
+                        <div class="col-5">   
+                            <img src="images/clients/New-Haw-Community-Centre-3.jpg" alt="New Haw Community Centre">                         
+                        </div>
+                        <div class="col-7">
+                            <h2>New Haw Community Centre, Woodham</h2>
+                            <h3 style="font-size: 18px;">At the Centre of Our Community</h3>
+                            <p>The Community Centre benefits from a fresh, modern design and an improved booking system. Services provided:</p>
+                            <ul>
+                                <li>Website redesign</li>
+                                <li>LemonBooking integration</li>
+                                <li>Google Search Console submission</li>
+                                <li>Google Analytics setup</li>
+                            </ul>
+                            <div class="padding-btn">
+                                <a class ="btn-secondary" href="https://newhawcommunitycentre.co.uk"
+                                target="_blank" rel="noopener noreferrer">View Client</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="gdpr-compliance-consultancy" class="shadow-box-2">                         
+                    <div class="row-2">
+                        <div class="col-5">   
+                            <img src="https://sybiltec.com/images/clients/The-GDPR-Compliance-Consultancy-2.jpg" alt="The GDPR Compliance Consultancy">                         
+                        </div>
+                        <div class="col-7">
+                            <h2>The GDPR Compliance Consultancy</h2>
+                            <h3 style="font-size: 18px;">Compliance, Delivered</h3>
+                            <p>The GDPR Compliance Consultancy required a website refresh and error fixing to improve SEO and traffic to the website. Services provided:</p>
+                            <ul>
+                                <li>Website refresh</li>
+                                <li>SEO improvements</li>
+                                <li>Blog post upload</li>
+                                <li>Theme customisations</li>
+                                <li>Google Search Console submission</li>
+                                <li>Google Analytis setup</li>
+                            </ul>        
+                            <div class="padding-btn">
+                                <a class ="btn-secondary" href="https://thegdprcomplianceconsultancy.co.uk"
+                                target="_blank" rel="noopener noreferrer">View Client</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <h2>How the Web Design Process Works</h2>
+                <p><a href="https://sybiltec.com/contact">Contact us</a> today to arrange a free initial consultation. During the consultation, we'll ask you some questions about your business and your reason for needing our website services. It's also a chance for you to ask us anything and determine if we are a good fit for each other. If you would like to take things further, we'll arrange a longer, in-depth conversation to understand your business and requirements in more detail.</p>
+
+                <p>If after this stage you are interested in commissioning our web design services, you'll be sent a quotation and an agreement which outlines the work to be carried out and the associated fees. There are no hidden charges, so you can be sure that the price quoted to you will be the price you pay.</p>
+
+                <p>Once the agreement has been signed by you, we will begin by planning the website structure - this will be in the form of a sitemap, and a list of pages (URLs) to be created for the site. </p>
+
+                <p>The next stage will involve creating a design for the website, beginning with the homepage. You'll be asked for feedback on the design, so the faster we can receive the feedback from you, the quicker we'll be able to progress onto the next stage.</p>
+
+                <p>When we agree on the final version of the designs, your website will be built on the most suitable platform, whether that is WordPress, Wix or Shopify. Finally, we will carry out thorough testing of the website to ensure that all functions are working correctly before launch.</p> 
+
+                <p>For further information on the website design process, please read the article <a href="https://sybiltec.com/web-design-process-explained-12-easy-steps">The Web Design Process Explained in 12 Easy Steps</a>.</p>
             </div>
         </div>
         <div class="contact section">
@@ -238,12 +278,11 @@
                     <div class="col-3">
                         <h4>Services</h4>
                         <p><a href="https://sybiltec.com/ecommerce-websites">E-commerce Websites</a></p>
-                        <p><a href="https://sybiltec.com/leaflet-design">Leaflet Design</a></p>
-                        <p><a href="https://sybiltec.com/training">Training</a></p>
-                        <p><a href="https://sybiltec.com/website-design">Web Design</a></p>
-                        <p><a href="https://sybiltec.com/web-design-bexley">Web Design Bexley</a></p>
-                        <p><a href="https://sybiltec.com/website-maintenance">Website Maintenance</a></p>
                         <p><a href="https://sybiltec.com/website-review">Website Review</a></p>
+                        <p><a href="https://sybiltec.com/website-design">Web Design</a></p>
+                        <p><a href="https://sybiltec.com/website-maintenance">Website Maintenance</a></p>
+                        <p><a href="https://sybiltec.com/training">Training</a></p>
+                        <p><a href="https://sybiltec.com/leaflet-design">Leaflet Design</a></p>
                     </div>
                     <div class="col-3">
                         <div class="ml-form-embed"
